2005-02-02 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/gcn_server.pl: A program to accept incoming GCN packets. Basic
          framework for a server to recieve the GCN packets. It currently will
          recieve the packets correctly, but does not respond with the correct
          ACK message. Possibly something to do with the way I open and close
          the socket.
        
        * lib/perl5/GCN/Constants.pm: Module to manage constants for the
          gcn_server.pl program.

2005-01-19 Alasdair Allan <aa@astro.ex.ac.uk> 
           Tim Jenness <timj@jach.hawaii.edu>

	* bin/jach_agent.pl and associated classes have been updated to
          work with the new JAC infrastructre and with the 3G eSTAR code.
          Code now loopbacks correctly when poked via ORAC-DR test script.

2005-01-11 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/user_agent.pl: Fulling working 3G user_agent.pl which will 
          talk to the 2G node_agent.pl running on dn2.astro.ex.ac.uk. This 
          user agent should be a lot more robust that the equivalent 2G 
          version as a lot of the nastiest as been refactored out into
          singleton classes.
          
        * bin/jach_agent.pl: Some refactoring, should now work (fully 3G?)
          but doesn't run up due to problems with OMP::SciProg modules.  

2005-01-10 Alasdair Allan <aa@astro.ex.ac.uk>

        * Extensive modifications to move the Config::Simple() backend into
          a singleton object. Modifications to user_agent.pl and to the
          eSTAR::UA::Handler to support the creation of an eSTAR::Config
          singleton class. Also modified eSTAR::Util.
          
          All other agent processes now need modifying to use the same
          code base. The user_agent.pl has been tested sucessfully against
          dn2.astro in SingleExposure mode only running on estar.astro,
          need to install NAG f95 onto estar.astro to test in Followup mode.
        