@@ -1,10 +1,16 @@
+2005-02-04 Aladair Allan <aa@astro.ex.ac.uk>
+
+        * bin/gcn_server.pl: Working socket connection to GCN service that
+          correctly accepts packets and send an ACK response. Does nothing
+          with the packets except log their arrival.
+
 2005-02-02 Aladair Allan <aa@astro.ex.ac.uk>
 
         * bin/gcn_server.pl: A program to accept incoming GCN packets. Basic
           framework for a server to recieve the GCN packets. It currently will
           recieve the packets correctly, but does not respond with the correct
           ACK message. Possibly something to do with the way I open and close
-          the socket.
+          the socket?
         
         * lib/perl5/GCN/Constants.pm: Module to manage constants for the
           gcn_server.pl program.
